--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -120,3 +120,350 @@
     }    
     
 }
+/////////////////////////////////////////
+// SIDE NAVIGATION
+
+
+.side-nav{
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
+        
+    &__item{
+        position: relative;
+
+        &:not(:last-child){
+            margin-bottom: .5rem;
+        }
+
+    }
+    
+    
+    &__item::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 3px;
+        background-color: var(--color-primary);
+        transform: scaleY(0);
+        transition: transform .2s,
+                    width .4s cubic-bezier(1,0,0,1) .2s,
+                    background-color .1s;
+        
+    }
+    
+    &__item:hover::before,
+    &__item--active:before{
+        transform: scaleY(1);
+        width: 100%;
+    }
+    
+    &__item:active::before{
+        background-color: var(--color-primary-light);
+    }
+    
+    &__link:link,
+    &__link:visited{
+        text-decoration: none;
+        text-transform: uppercase;
+        color: var(--color-grey-light-1);
+        display: block;
+        padding: 1.5rem 3rem;
+        
+        //z-index so the anchor looks on top of the pheudo __item:hover::before (zindex needs the element where is declared to be positioned)
+        position: relative;
+        z-index: 10;
+        
+        display: flex;
+        align-items: center;
+    }
+
+    &__icon{
+        height: 1.75rem;
+        width: 1.75rem;
+        fill: currentColor; //use the color of the parent element which is the anchor link (if the current svg element have a color setting it will be used instead)
+        margin-right: 2rem;
+
+    }
+}
+
+/////////////////////////////////////////
+// LEGAL TEXT
+
+.legal{
+    font-size: 1.2rem;
+    color:var(--color-grey-light-4);
+    text-align: center;
+    padding: 2.5rem;
+}
+
+/////////////////////////////////////////
+// GALLERY
+
+.gallery{
+    display: flex;
+    
+    &__item{
+        
+    }
+    &__photo{
+        width: 100%;        
+        display: block;
+    }
+}
+
+/////////////////////////////////////////
+// HOTEL OVERVIEW
+
+.overview{
+    display: flex;
+    align-items: center;
+    border-bottom: var(--line);
+    
+    &__heading{
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+    }
+    &__stars{
+        margin-right: auto;
+        display: flex; //eliminate the whitespace bellow each svg element which behave like an inline element by default
+    }
+    &__icon-star,
+    &__icon-location{
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+    
+    &__location{
+//        margin-left: auto;
+        font-size: 1.2rem;
+        display: flex;
+        vertical-align:middle;
+    }
+    &__icon-location{
+        margin-right: .5rem;
+    }
+    &__rating{
+        background-color: var(--color-primary);
+        margin-left: 3rem;
+        padding: 0 2.25rem;
+        color: var(--color-grey-light-2);
+        align-self: stretch; //
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+    &__rating-average{
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -4px;
+        
+    }
+    &__rating-count{
+        font-size: .8rem;
+        text-transform: uppercase;
+    }
+    
+    
+}
+
+/////////////////////////////////////////
+// BUTTON LINE
+
+.btn-inline{
+    border: none;
+    color: var(--color-primary);
+    font-size: inherit; //make this component more reusable. Only needs the parent element's font'size to be set in each case when used this class
+    border-bottom: 1px solid currentColor; //currentColor set the same color used in font color ("var(--color-primary)" in this case)
+    padding-bottom: 2px;
+    display: inline-block;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .2s;
+    
+    & span{
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
+    
+    &:hover{
+        color:var(--color-grey-dark-1);
+        span{
+            margin-left: 8px;
+        }
+    }
+    &:focus{
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
+
+@keyframes pulsate{
+    0%{
+        transform: scale(1);
+        box-shadow: none;        
+    }
+    50%{
+        transform: scale(1.05);
+        box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+    }
+    100%{
+        transform: scale(1);
+        box-shadow: none;
+    }
+}
+
+/////////////////////////////////////////
+// PARAGRAPH
+
+.paragraph:not(last-of-type){
+    margin-bottom: 3rem;
+}
+
+/////////////////////////////////////////
+// LIST
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0 ;
+    
+    
+    
+    border-top: var(--line);
+    border-bottom: var(--line);
+    
+    &__item{
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+    &__item::before{
+        content: "";
+        display: inline-block;
+        margin-right: .7rem;
+        width: 1rem;
+        height: 1rem;
+        
+        
+        // Older browser (triky doesn't support to change the color of the svg)
+//        background-image: url(../img/chevron-thin-right.svg);
+//        background-size: cover;
+        
+        //Newer browsers - mask (+change color feature)
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+        
+    }
+}
+
+/////////////////////////////////////////
+// RECOMMEND
+
+.recommend{
+    display: flex;
+    align-items: center;
+    
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    &__count{
+        margin-right: auto;
+    }
+    &__friends{
+        
+    }
+    &__photo{
+        box-sizing: content-box;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        border:3px solid #fff;
+
+
+        &:not(:last-child){
+            margin-left: -1.5rem;
+        }
+    }
+}
+
+/////////////////////////////////////////
+// USER REVIEWS
+
+.review{
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    
+    position: relative;
+    overflow: hidden;
+    &__text{
+        margin-bottom: 2rem;
+        
+        z-index: 10;
+        position: relative; //for z-index to work
+    }
+    &__user{
+        display: flex;
+        align-items: center;
+    }
+    &__photo{
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+    }
+    &__user-box{
+        margin-right: auto;
+        margin-left: 1.5rem;
+    }
+    &__user-name{
+        text-transform: uppercase;
+        font-size: 1.1rem;
+        font-weight: 600;
+        margin-bottom: .4rem;
+    }
+    &__user-date{
+        font-size: 1rem;
+        font-weight: 100;
+        color: var(--color-grey-dark-3);
+    }
+    &__rating{
+        font-size: 2.2rem;
+        font-weight: 300;
+        color: var(--color-primary);
+    }
+    &::before{
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        line-height: 1;
+        
+        z-index: 1;
+        
+    }   
+}
+
+/////////////////////////////////////////
+// CALL TO ACTION (CTA)
+
+.cta{
+    
+}
