--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,11 +13,20 @@
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
 
-    --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
     
     --line: 1px solid var(--color-grey-light-1);
 }
+
+// CSS doesn't allow to use custom property (CSS variable) in media query
+// remenber not to use rem in media query but instead em or px
+
+$bp-largest: 75em; // 1200px / 16 = 75em
+$bp-large: 68.75em; //1100px /16 = 68.75em
+$bp-medium: 56.25em; //900px /16 = 56.25em
+$bp-small: 37.5em; //600px /16 = 37.5em
+$bp-smallest: 31.25em; //500px /16 = 31.25em
+
 
 *{
     margin: 0;
@@ -33,6 +42,13 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%; //defining what 1rem is (10px each)
+    
+    @media only screen and (max-width:$bp-large){
+        font-size: 50%; //rem=8px
+    }
+//    @media only screen and (max-width:$bp-small){
+//        font-size: 37.5%; //rem=6px
+//    }
 }
 
 body{
