--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,9 +3,7 @@
 
 .logo{
     height: 3.25rem;
-    margin-left: 2rem;
-    
-    
+    margin-left: 2rem;    
 }
 
 /////////////////////////////////////////
@@ -18,6 +16,11 @@
     justify-content: center;
     align-items: center;
     
+    @media only screen and (max-width:$bp-smallest){
+        order: 1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
     &__input{
         //input element doesn't inheret the font-family and font-size of the global document
         //we actually want the font-size to be inherited from .header class
@@ -72,7 +75,7 @@
     align-self: stretch;
     
     display: flex;
-    align-items: center;
+    align-items: center;    
     
     & > *{
         padding: 0 2rem;
@@ -128,12 +131,27 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
+    
+    @media only screen and (max-width:$bp-medium){
+        margin: 0;
+        display: flex;
+    }
+
         
     &__item{
         position: relative;
 
         &:not(:last-child){
             margin-bottom: .5rem;
+
+            @media only screen and (max-width:$bp-medium){
+                margin: 0;
+            }
+
+        }
+
+        @media only screen and (max-width:$bp-medium){
+            flex: 1;
         }
 
     }
@@ -178,6 +196,17 @@
         
         display: flex;
         align-items: center;
+        height: 100%;
+        
+        @media only screen and (max-width:$bp-medium){
+            justify-content: center;
+            padding: 2rem;
+        }
+        
+        @media only screen and (max-width:$bp-small){
+            padding: 1.5rem .5rem;
+            flex-direction: column;            
+        }
     }
 
     &__icon{
@@ -185,7 +214,15 @@
         width: 1.75rem;
         fill: currentColor; //use the color of the parent element which is the anchor link (if the current svg element have a color setting it will be used instead)
         margin-right: 2rem;
-
+        @media only screen and (max-width:$bp-small){
+            margin-right: 0;
+            margin-bottom: .5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
+    }
+    &__text{
+        text-align: center;
     }
 }
 
@@ -197,6 +234,11 @@
     color:var(--color-grey-light-4);
     text-align: center;
     padding: 2.5rem;
+
+    @media only screen and (max-width:$bp-medium){
+        display: none;
+    }
+
 }
 
 /////////////////////////////////////////
@@ -228,6 +270,12 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+        
+        @media only screen and (max-width:$bp-small){
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
+        
     }
     &__stars{
         margin-right: auto;
@@ -261,16 +309,29 @@
         align-items: center;
         justify-content: center;
 
+        @media only screen and (max-width:$bp-small){
+            padding: 0 1.5rem;
+        }
+
     }
     &__rating-average{
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -4px;
+
+        @media only screen and (max-width:$bp-small){
+            font-size: 1.8rem;
+        }
         
     }
     &__rating-count{
         font-size: .8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width:$bp-small){
+            font-size: .5rem;
+        }
+
     }
     
     
@@ -358,15 +419,19 @@
         
         
         // Older browser (triky doesn't support to change the color of the svg)
-//        background-image: url(../img/chevron-thin-right.svg);
-//        background-size: cover;
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
         
         //Newer browsers - mask (+change color feature)
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size: cover;
+        
+        @supports (-webkit-mask-image: url()) or (mask-image: url()){
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;
+        }
         
     }
 }
@@ -384,7 +449,7 @@
         margin-right: auto;
     }
     &__friends{
-        
+        display: flex;
     }
     &__photo{
         box-sizing: content-box;
@@ -392,11 +457,12 @@
         height: 4rem;
         border-radius: 50%;
         border:3px solid #fff;
+        margin-left: -2rem;
 
 
-        &:not(:last-child){
-            margin-left: -1.5rem;
-        }
+//        &:not(:last-child){
+//            margin-left: -2rem;
+//        }
     }
 }
 
@@ -411,6 +477,13 @@
     
     position: relative;
     overflow: hidden;
+    
+    
+    @media only screen and (max-width:$bp-medium){
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
+    
     &__text{
         margin-bottom: 2rem;
         
@@ -465,5 +538,106 @@
 // CALL TO ACTION (CTA)
 
 .cta{
+    padding: 3.5rem 0;
+    text-align: center;
+
+    @media only screen and (max-width:$bp-medium){
+        padding: 2.5rem 0;
+    }
+    
+    &__book-now{
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+//        letter-spacing: 1px;
+        margin-bottom: 2.5rem;
+    }
+}
+
+/////////////////////////////////////////
+// CALL TO ACTION (CTA)
+
+.btn{
+    border:none;
+    border-radius: 100px;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-weight: 300;
+    background-image: linear-gradient(to right,var(--color-primary-light),var(--color-primary-dark));
+    color: #fff;
+    cursor: pointer;
+    
+    position: relative;
+    overflow: hidden;
+    box-shadow: var(--shadow-light);
+    
+    & > *{
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+
+    }
+    
+    &__visible{        
+        padding: 2rem 7.5rem;
+    }
+    
+    &__invisible{
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        top: -100%;
+    }
+    &:hover{
+        // tip: transition doesnt work for background images
+        background-image: linear-gradient(to left,var(--color-primary-light),var(--color-primary-dark));
+    }
+    &:hover &__invisible{
+        top: 0;
+    }
+    &:hover &__visible{
+        transform: translateY(100%);
+        opacity: 0 ;
+    }
+    
+    &:focus{
+        animation: pulsate 1s infinite;
+        outline: none;
+    }
+}
+
+.body{
+    background-color: #eee;
+//    padding: 1rem;
+    .challenge{
+        border: 1px solid blue;
+        display: grid;
+        grid-gap: 2rem;
+        grid-template-columns: repeat(3,2fr) 1fr;
+        grid-template-rows: 1fr 2fr 4fr 1fr;
+        
+        & > *{
+//            margin: 1rem;
+            background-color: rgba(0,0,0,.1);
+        }
+        .header2{
+            grid-row: 1 / 2;
+            grid-column: 1 / -1;
+        }
+        .main2{
+            grid-row: 3 / 4;
+            grid-column: 1 / span 3;            
+        }
+        .sidebar2{
+            grid-row: 2 / 4;
+            grid-column: -2 / -1;
+            
+        }
+        .footer2{
+            grid-row: -2 / -1;
+            grid-column: 1 / -1;            
+        }
+    }
     
 }
