--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,12 +3,16 @@
     margin: 8rem auto;
     background-color: var(--color-grey-light-2);
     box-shadow: var(--shadow-dark);
-
-//    min-height: 50rem;
     
 //    display: flex;
 //    flex-direction: column;
 //    flex-wrap: nowrap;
+    
+    @media only screen and (max-width:$bp-largest){
+        margin:0;
+        max-width: 100%;
+        width: 100%;
+    }
     
 }
 
@@ -21,10 +25,21 @@
     display: flex;
     justify-content:space-between;
     align-items: center;
+
+    @media only screen and (max-width:$bp-smallest){
+        flex-wrap: wrap;
+        height: 10rem;
+        align-content: space-around;
+    }
+    
 }
 
 .content{
     display: flex;
+    
+    @media only screen and (max-width:$bp-medium){
+        flex-direction: column;
+    }
 }
 
 .sidebar{
@@ -34,7 +49,12 @@
     display: flex;
     flex-direction: column;
     align-items: stretch; //just remaining: keep default so we don't need to set "width: 100%;" on the .side-nav class;
-    justify-content:space-between;    
+    justify-content:space-between;
+    
+//    @media only screen and (max-width:$bp-medium){
+//        flex: 1;
+//    }
+
     
 }
 .hotel-view{
@@ -49,6 +69,13 @@
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line) ;
     padding: 4.5rem;
+    
+    @media only screen and (max-width:$bp-medium){
+        padding: 3rem;
+    }
+    @media only screen and (max-width:$bp-small){
+        flex-direction: column;
+    }
 }
 
 .description{
@@ -57,6 +84,16 @@
     padding: 3rem;
     flex: 0 0 60%;
     margin-right: 4.5rem;
+    
+    @media only screen and (max-width:$bp-medium){
+        padding: 2rem;
+        margin-right: 3rem;
+    }
+    @media only screen and (max-width:$bp-small){
+        margin-right: 0;
+        margin-bottom: 3rem;
+    }
+
 }
 
 .user-reviews{
